syntax = "proto3";

package comment;

option go_package = "github.com/Yux77Yux/platform_backend/generated/comment";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

import "comment/methods/post.proto";
import "comment/methods/get.proto";
import "comment/methods/delete.proto";

service CommentService {
  rpc PublishComment(comment.methods.PublishCommentRequest) returns (comment.methods.PublishCommentResponse) {
    option (google.api.http) = {
      post: "/api/comment"
      body: "*"
    };
  }

  rpc InitalComments(comment.methods.InitalCommentsRequest) returns (comment.methods.InitalCommentsResponse) {
    option (google.api.http) = {
      get: "/api/comment/{creation_id}"
    };
  }

  rpc GetTopComments(comment.methods.GetTopCommentsRequest) returns (comment.methods.GetCommentsResponse) {
    option (google.api.http) = {
      get: "/api/comment/top/{creation_id}/{page}"
    };
  }

  rpc GetSecondComments(comment.methods.GetSecondCommentsRequest) returns (comment.methods.GetCommentsResponse) {
    option (google.api.http) = {
      get: "/api/comment/second/{creation_id}/{root_id}/{page}"
    };
  }

  rpc GetReplyComments(comment.methods.GetReplyCommentsRequest) returns (comment.methods.GetCommentsResponse) {
    option (google.api.http) = {
      get: "/api/comment/reply/{access_token.value=*}/{page}"
    };
  }

  rpc DeleteComment(comment.methods.DeleteCommentRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/api/comment/{comment_id}/{access_token.value=*}"
    };
  }
}