syntax = "proto3";

package comment.methods;

option go_package = "github.com/Yux77Yux/platform_backend/generated/comment";

import "comment/messages/comment.proto";

import "common/access_token.proto";
import "common/api_response.proto";

// 作品的一级评论
message InitalCommentsRequest {
  int64 creation_id = 1;
}

message InitalCommentsResponse {
  repeated comment.messages.Comment comments = 1;
  comment.messages.CommentArea comment_area = 2;
  common.ApiResponse msg = 3;
}

// 作品的一级评论
message GetTopCommentsRequest {
  int64 creation_id = 1;
  int32 page = 2;
}

// 一级评论内的评论
message GetSecondCommentsRequest {
  int64 creation_id = 1;
  int32 root = 2;// 一级评论所在
  int32 page = 3;
}

// 回复我的评论，在页面的消息内显示,权限类
message GetReplyCommentsRequest {
  common.AccessToken access_token = 1;// 自己的id，
  int32 page = 2;
}

message GetCommentsResponse {
  repeated comment.messages.Comment comments = 1;
  common.ApiResponse msg = 2;
}

message GetCommentRequest {
  int64 creation_id = 1;
}


message GetCommentResponse {
  comment.messages.Comment comment = 1;
  common.ApiResponse msg = 2;
}