syntax = "proto3";

package common;

option go_package = "github.com/Yux77Yux/platform_backend/generated/common";

message CreationId {
  int64 id = 1;
}

message ViewCreation {
  int64 id = 1;
  string ipv4 = 2;
}
